--- a/style/styles.css
+++ b/style/styles.css
@@ -2,3 +2,23 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+
+@media only screen and (max-width:768px) {
+  .main-title{
+    font-size: 24px;
+  }
+
+  .main-logo{
+    width: 150px;
+    height: 150px;
+  }
+  .main-heading{
+    font-size: 36px;
+  }
+}
+
+@media only screen and (max-width:476px) {
+  .main-heading{
+    font-size: 26px;
+  }
+}
