--- a/style/styles.css
+++ b/style/styles.css
@@ -2,10 +2,51 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.main{
+  background-image: url(/img/uefa-wall3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  }
+
+.main-desc{
+  font-size: 10px;
+}
+
+.main-btn__group{
+  font-size: 12px;
+}
+
+.main-dl{
+  width: 180px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-dl dt{
+  margin-right: 4px;
+}
+
+.tab-img{
+  width: 100%;
+  height: 610px;
+}
+
+@media only screen and (max-width:980px) {
+  .main-logo{
+    width: 160px;
+    height: 160px;
+  }
+}
+
 
 @media only screen and (max-width:768px) {
   .main-title{
     font-size: 24px;
+  }
+
+  .tab-img{
+    height: 410px;
   }
 
   .main-logo{
